force-app/main/default/objects/Commune__c/Commune__c.object-meta.xml
<CustomObject>
    <description>Communes membres d'un EPCI — enrichies depuis geo.api.gouv.fr</description>
    <label>Commune</label>
    <nameField>
        <label>Nom Commune</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>