force-app/main/default/objects/Commune__c/fields/Code_Departement__c.field-meta.xml
<CustomField>
    <fullName>Code_Departement__c</fullName>
    <label>Code Département</label>
    <length>3</length>
    <type>Text</type>
</CustomField>