force-app/main/default/objects/Commune__c/fields/Code_INSEE__c.field-meta.xml
<CustomField>
    <fullName>Code_INSEE__c</fullName>
    <description>Code INSEE de la commune (5 chiffres) — clé externe pour l'upsert</description>
    <externalId>true</externalId>
    <label>Code INSEE</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>