force-app/main/default/objects/Commune__c/fields/Code_Region__c.field-meta.xml
<CustomField>
    <fullName>Code_Region__c</fullName>
    <label>Code Région</label>
    <length>3</length>
    <type>Text</type>
</CustomField>