force-app/main/default/objects/Commune__c/fields/EPCI__c.field-meta.xml
<CustomField>
    <fullName>EPCI__c</fullName>
    <label>EPCI</label>
    <referenceTo>EPCI__c</referenceTo>
    <relationshipLabel>Communes</relationshipLabel>
    <relationshipName>Communes</relationshipName>
    <type>Lookup</type>
</CustomField>