force-app/main/default/objects/Commune__c/fields/Surface__c.field-meta.xml
<CustomField>
    <fullName>Surface__c</fullName>
    <label>Surface (km²)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>